--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -14,7 +14,7 @@ monitor=,preferred,auto,1
 
 $terminal = alacritty
 $fileManager = nautilus
-$menu = rofi -show run
+$menu = rofi -show drun
 
 
 #################
@@ -26,6 +26,7 @@ exec-once = waybar -c /etc/xdg/waybar/bottombar.jsonc -s /etc/xdg/waybar/bottomb
 exec-once = nm-applet &
 exec-once = swww-daemon
 exec-once = swww img /etc/xdg/hypr/2fennec-alt.svg
+exec-once = blueman-applet
 
 #############################
 ### ENVIRONMENT VARIABLES ###
